# resources/lang/en/messages.php
@@ -5,13 +5,24 @@ return [
 
     'data_invalid' => 'Data invalid',
     'request_successful' => 'Request successful',
-    'user_creation_error' => 'An error occurred while creating the user.',
+    'invalid_request' => 'Request invalid',
+    'user_creation_error' => 'An error occurred while creating the user',
     'invalid_credentials' => 'Invalid credentials',
     'login_successful' => 'Successfully logged in',
     'logout_successful' => 'Successfully logged out',
     'reset_link_sent' => 'Reset link sent.',
-    'unable_to_send_reset_link' => 'Unable to send reset link.',
-    'password_reset_successful' => 'Password reset successful.',
-    'unable_to_reset_password' => 'Unable to reset password.',
+    'unable_to_send_reset_link' => 'Unable to send reset link',
+    'password_reset_successful' => 'Password reset successful',
+    'unable_to_reset_password' => 'Unable to reset password',
+    'link_expired' => 'Link expired',
+    'account_activated' => 'Account activated succefully',
+    'must_verify_email' => 'Please check your inbox to activate your account',
+    'will_send_email' => 'Please wait, we will send you email soon',
+    'too_may_request' => 'Too many requests!',
+    'email_alread_verified' => 'L\'email est déjà vérifié.',
+    'verification_link_expired' => 'Verification link has expired.',
+    'email_verification_link_invalid' => 'Invalid verification link.',
+    'verification_link_sent' => 'Verification link sent!',
+    'validation_failed' => 'Validation failed',
     'cfa' => 'West African CFA Franc',
 ];
